--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "gmb-api"
-version = "0.1.0"
+version = "1.0.0"
 description = ""
 authors = ["bradi <bradisbon@gmail.com>"]
 
@@ -8,6 +8,7 @@ authors = ["bradi <bradisbon@gmail.com>"]
 python = "^3.7"
 oauth2client = "^4.1.3"
 google-auth-oauthlib = "^0.4.4"
+pydantic = "^1.8.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
